--- a/代码/c#/log4net/log4net.config
+++ b/代码/c#/log4net/log4net.config
@@ -1,52 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<configuration>
-  <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
-  </configSections>
-  <log4net>
-    <logger name="logerror">
-      <level value="ERROR" />
-      <appender-ref ref="ErrorAppender" />
-    </logger>
-    <logger name="loginfo">
-      <level value="INFO" />
-      <appender-ref ref="InfoAppender" />
-    </logger>
-    <appender name="ErrorAppender" type="log4net.Appender.RollingFileAppender">
-      <!--设置日志存储路径-->
-      <param name="File" value="Data//WebLog//LogError//" />
-      <!--是否追加到文件-->
-      <param name="AppendToFile" value="true" />
-      <!--最多产生的日志文件数，超过则只保留最新的n个。设定值value="－1"为不限文件数-->
-      <param name="MaxSizeRollBackups" value="100" />
-      <param name="MaxFileSize" value="1024" />
-      <!--是否只写到一个文件中-->
-      <param name="StaticLogFileName" value="false" />
-      <!--这是按日期产生文件夹，并在文件名前也加上日期-->
-      <param name="DatePattern" value="yyyyMM/dd&quot;.log&quot;" />
-      <!--按照何种方式产生多个日志文件(日期[Date],文件大小[Size],混合[Composite])-->
-      <param name="RollingStyle" value="Date" />
-      <layout type="log4net.Layout.PatternLayout">
-        <param name="ConversionPattern" value="%n异常时间：%d [%t] %n异常级别：%-5p %n异常位置：[%thread] (%file:%line) %n消息描述：%message%n异常：%exception%n%n " />
-      </layout>
-    </appender>
-    <appender name="InfoAppender" type="log4net.Appender.RollingFileAppender">
-      <!--设置日志存储路径-->
-      <param name="File" value="Data//WebLog//LogInfo//" />
-      <!--是否追加到文件-->
-      <param name="AppendToFile" value="true" />
-      <!--最多产生的日志文件数，超过则只保留最新的n个。设定值value="－1"为不限文件数-->
-      <param name="MaxSizeRollBackups" value="100" />
-      <param name="MaxFileSize" value="1024" />
-      <!--是否只写到一个文件中-->
-      <param name="StaticLogFileName" value="false" />
-      <!--这是按日期产生文件夹，并在文件名前也加上日期-->
-      <param name="DatePattern" value="yyyyMM/dd&quot;.log&quot;" />
-      <!--按照何种方式产生多个日志文件(日期[Date],文件大小[Size],混合[Composite])-->
-      <param name="RollingStyle" value="Date" />
-      <layout type="log4net.Layout.PatternLayout">
-        <param name="ConversionPattern" value="%n日志时间：%d [%t] %n日志级别：%-5p %n消息描述：%c [%x] %n%m %n " />
-      </layout>
-    </appender>
-  </log4net>
-</configuration>
+<log4net>
+	<root>
+		<level value="DEBUG"/>
+		<appender-ref ref="SysAppender"/>
+		<appender-ref ref="consoleApp"/>
+	</root>
+	<!--信息日志配置-->
+	<appender name="SysAppender" type="log4net.Appender.RollingFileAppender">
+		<param name="File" value="log\\" />
+		<param name="AppendToFile" value="true" />
+		<param name="MaximumFileSize" value="20MB" />
+		<param name="MaxSizeRollBackups" value="100" />
+		<param name="StaticLogFileName" value="false" />
+		<param name="DatePattern" value="\\yyyyMM\\yyyyMMdd&quot;.log&quot;" />
+		<param name="RollingStyle" value="Composite" />
+		<layout type="log4net.Layout.PatternLayout">
+			<param name="ConversionPattern" value="%n&#13;&#10;--------------------------------------------------------------------------------------&#13;&#10;%n日志时间：%d [%t] %n日志级别：%-5p %n日 志 类：%c [%x] %n%m %n" />
+			<param name="Header" value="&#13;&#10;======================================================================================&#13;&#10;" />
+		</layout>
+	</appender>
+	<appender name="consoleApp" type="log4net.Appender.ConsoleAppender,log4net">
+		<layout type="log4net.Layout.PatternLayout,log4net">
+			<param name="ConversionPattern" value="%d [%t] %-5p %c - %m%n" />
+		</layout>
+	</appender>
+	<logger name="WebLogger">
+		<level value="DEBUG"/>
+	</logger>
+
+</log4net>
